<resources>
    <string name="apppackage" translatable="false">com.west.develop.westapp</string>
    <string name="app_Name" translatable="false">168-VCT</string>
    <string name="remote_Name" translatable="false">168-VCI</string>
    <string name="website_msg" translatable="false">http://www.168auto.com</string>
    <string name="company_phone1">0851-87100001</string>
    <string name="company_phone2">0851-87100002</string>
    <string name="company_phone3">0851-87100003</string>
    <string name="company_phone4">0851-87100004</string>
    <string name="company_phone5">0851-87100005</string>
    <string name="company_phone6">0851-87100006</string>
    <string name="company_email">168auto@168auto.com</string>
    <string name="digits_diagnosis_password" translatable="false">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="userName_Digit" translatable="false">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="number_Digit" translatable="false">0123456789</string>
    <string name="Sure">确定</string>
    <string name="Back">返回</string>
    <string name="Help">帮助</string>
    <string name="Sava">保存</string>
    <string name="edit">编辑</string>
    <string name="exit">退出</string>
    <string name="success">成功</string>
    <string name="Storage_Permission_Denied_Request">权限被否决，前往“应用信息”>“权限”中允许所有权限！</string>
    <string name="Storage_Permission_Denied_Exit">权限被否决，将退出应用!</string>
    <string name="version">版本：</string>
    <string name="Network_Connected">网络已连接</string>
    <string name="Network_Disconnected">网络已断开</string>
    <string name="selected">已选择</string>
    <string name="downloadFailed">下载失败</string>
    <string name="tip_program_Running">程序正在执行...</string>
    <string name="tip_message_download">正在初始化接头，请勿断开连接...</string>
    <string name="tip_message_FW_download">正在升级接头，请勿断开连接...</string>
    <string name="tip_over_max_value">设置次数超过最大值,请重新输入</string>
    <string name="tip_not_selected">您尚未选择！</string>
    <string name="hint_input_times">输入次数</string>
    <string name="type_Number">数字</string>
    <string name="type_Text">数字字母组合</string>
    <string name="size_not_matching">位数与要求的位数不符</string>
    <string name="tip_BT_Disconnect">蓝牙已断开连接，是否重连？</string>
    <string name="interface_no_connect">未连接</string>
    <string name="interface_connect">已连接</string>
    <string name="interface_not_found" >未发现设备</string>
    <string name="interface_bt_connect">蓝牙设备: </string>
    <string name="interface_usb_connect">USB设备: </string>
    <string name="interface_unit_Device"> 台</string>
    <string name="interface_device_connect" >设备已连接</string>
    <string name="interface_change_STATUS">修改状态</string>
    <string name="sign_Success">激活成功</string>
    <string name="signing">正在激活,请稍等</string>
    <string name="toast_Input_userName">请输入用户名</string>
    <string name="toast_Input_realName">请输入姓名</string>
    <string name="toast_Input_phone">请输入电话号码</string>
    <string name="toast_Input_Email">请输入邮箱</string>
    <string name="toast_Input_Address">请输入地址</string>
    <string name="location">定位中...</string>
    <string name="locateFail">定位失败</string>
    <string name="user_sign">用户信息注册</string>
    <string name="main_diagnosis">诊断</string>
    <string name="main_data">诊断数据</string>
    <string name="main_upgrade">升级</string>
    <string name="main_setting">设置</string>
    <string name="main_login">登录</string>
    <string name="device_bond_title">设备绑定</string>
    <string name="device_bond_message">设备没有绑定，现在进行绑定</string>
    <string name="check_device">由于您长时间未连接网络进行检查，您的设备已经被暂停使用，请连接网络进行检查！</string>
    <string name="check_deviceTip1">在</string>
    <string name="check_deviceTip2">天或者继续使用</string>
    <string name="check_deviceTip3">次后，如果设备不进行检查，将会强制暂停使用。请您近期尽快连接网络进行检查。</string>
    <string name="device_Tip_Over">设备可用次数已用完，请联系客服！</string>
    <string name="diagnosis_function">功能诊断</string>
    <string name="sort_pinyin">拼音排序</string>
    <string name="sort_number">序号排序</string>
    <string name="local_application">本地程序</string>
    <string name="loadData_Tip">本设备是新安装的系统，需要安装汽车诊断程序才能使用</string>
    <string name="afterLoad_Tip">以后下载</string>
    <string name="nowLoad_Tip">现在下载</string>
    <string name="bt_conn_tip">蓝牙连接提示</string>
    <string name="bt_conn_tip_message">\n1、请检查蓝牙设备是否打开。
                                \n\n2、请检查蓝牙接头是否通电或者在有效距离中。
                                \n\n3、如果蓝牙设备与其他设备正在连接，请进入其他设备将蓝牙接头断开后再连接。
                                \n\n4、设备通电后，请稍候，检测到设备后会自动连接。\n</string>
    <string name="flush">刷新</string>
    <string name="upgrade_counts">个软件可升级</string>
    <string name="upgrade_carname">车型名称</string>
    <string name="upgrade_presentversion">当前最新版本</string>
    <string name="upgrade_version">可升级版本</string>
    <string name="upgrade_allselect">全选</string>
    <string name="upgrade_canleallselect">取消全选</string>
    <string name="upgrade_update">一键升级</string>
    <string name="upgrade_pull_downtoup">正在加载更多...</string>
    <string name="upgrade_select">更新</string>
    <string name="delete_select">删除</string>
    <string name="upgrade_select_num">个</string>
    <string name="tip_UnSign">您尚未激活，需要激活后方可下载新程序。是否现在激活？</string>
    <string name="my_report">我的报告</string>
    <string name="my_jietou">我的设备</string>
    <string name="my_peopleinfo">个人信息</string>
    <string name="setting_about">关于</string>
    <string name="setting_test">本地调试</string>
    <string name="set_success">配置完成</string>
    <string name="my_language">多语言</string>
    <string name="inspect_upgrade">检查更新</string>
    <string name="new_upgrade">发现新版本</string>
    <string name="setting_noSign">未激活</string>
    <string name="loadingDocument">正在加载，请稍候</string>
    <string name="device_sail_message">配置后将不能再下载客户试运行程序，且开始计算试用次数，是否配置设备？</string>
    <string name="device_sail">执行配置</string>
    <string name="device_no_sail">点错了</string>
    <string name="report_diagnose">诊断报告</string>
    <string name="report_diagnose_recode">历史诊断记录</string>
    <string name="report_num">份报告</string>
    <string name="backup_num">份备份</string>
    <string name="report_delete">删除</string>
    <string name="report_post">上传</string>
    <string name="report_details">记录详情</string>
    <string name="report_name_lable">诊断记录：</string>
    <string name="report_post_success">上传成功</string>
    <string name="report_post_Failed">上传失败：\n</string>
    <string name="report_posted">已上传</string>
    <string name="unable_Delete">该条记录无法删除</string>
    <string name="local_report">诊断记录</string>
    <string name="remote_report">备份数据</string>
    <string name="startdownload">开始下载</string>
    <string name="stopdownload">全部暂停</string>
    <string name="unknown">未知大小</string>
    <string name="waitdownload">等待下载</string>
    <string name="downloading">正在下载</string>
    <string name="stop">暂停下载</string>
    <string name="bondTarget">绑定终端：</string>
    <string name="user_Profile">个人信息</string>
    <string name="user_LableName">姓名：</string>
    <string name="user_LablePhone">电话：</string>
    <string name="user_LableMail">邮箱：</string>
    <string name="user_LableAddr">地址：</string>
    <string name="device_Info">设备信息</string>
    <string name="deviceSn">序列号\u3000：</string>
    <string name="deviceType">设备类型：</string>
    <string name="deviceVersion">硬件版本：</string>
    <string name="deviceSignTime">激活时间：</string>
    <string name="device_RemainCount">剩余次数：</string>
    <string name="deviceType_Release">用户设备</string>
    <string name="deviceType_Debug">开发设备</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_zh" translatable="false">中文</string>
    <string name="tip_message_language_change">正在切换...</string>
    <string name="help_problem">常见问题解答</string>
    <string name="help_guide">快速指南</string>
    <string name="help_manual">用户手册</string>
    <string name="help_guide_dcm" translatable="false">快速指南</string>
    <string name="help_manual_dcm" translatable="false">用户手册</string>
    <string name="quest_document_update">检查到文档新版本，是否现在更新？</string>
    <string name="radio_read">我已阅读并同意</string>
    <string name="about_veision">当前版本:</string>
    <string name="about_disclaimer">免责声明</string>
    <string name="preferenceTitle">偏好设置</string>
    <string name="timeout_notActive">未响应超时：</string>
    <string name="timeout_Backup">备份超时</string>
    <string name="btn_Modify">修  改</string>
    <string name="unit_Second">秒</string>
    <string name="unit_Minuts">分</string>
    <string name="toast_Preference_Input_none">您输入的值为空</string>
    <string name="toast_Preference_Input_Large">您设定的时间太长</string>
    <string name="toast_Preference_Input_Small">您设定的时间太短</string>
    <string name="toast_Preference_Success">修改成功</string>
    <string name="lockscreen_transport_prev_description">上一个</string>
    <string name="lockscreen_transport_next_description">下一个</string>
    <string name="lockscreen_transport_pause_description">暂停</string>
    <string name="lockscreen_transport_fullscreen_description">全屏</string>
    <string name="lockscreen_transport_play_description">播放</string>
    <string name="lockscreen_transport_stop_description">停止</string>
    <string name="lockscreen_transport_rew_description">快退</string>
    <string name="lockscreen_transport_ffw_description">快进</string>
    <string name="tip_downLoad_Finished">升级完成</string>
    <string name="tip_program">程序</string>
    <string name="tip_message_downLoad_no_replace">本地程序已经是最新版本！不能替换</string>
    <string name="tip_message_downLoad_replace">是否替换成新版本？</string>
    <string name="tip_message_wifi_no_conn">WIFI 尚未连接,是否继续下载</string>
    <string name="tip_message_net_no_conn">网络未连接，无法下载</string>
    <string name="tip_message_useCount">设备可更新次数已用完，不能进行下载，请联系客服修改使用次数</string>
    <string name="tip_kown">知道了</string>
    <string name="tip_title">提示</string>
    <string name="tip_message_get">正在获取数据...</string>
    <string name="tip_message_bt_conn">正在连接蓝牙...</string>
    <string name="tip_message_exit">确定退出应用?</string>
    <string name="tip_message_delete">你确定要删除?</string>
    <string name="tip_no">取消</string>
    <string name="tip_yes">确定</string>
    <string name="tip_message_execute">程序正在执行...</string>
    <string name="tip_message_finish">程序已执行完毕，是否执行下一个程序？</string>
    <string name="tip_net_nonect">请连接网络</string>
    <string name="tip_net_monet">您当前使用的是移动网络</string>
    <string name="toast_unBond">设备未绑定</string>
    <string name="toast_unsign">设备未激活</string>
    <string name="toast_InputSN">请输入设备序列号</string>
    <string name="toast_InputSN_Code">请输入激活码</string>
    <string name="toast_ErrorSN">设备SN码输入错误</string>
    <string name="toast_USB_not_connected">USB 未连接</string>
    <string name="toast_BT_not_connected">蓝牙 未连接</string>
    <string name="toast_Config_Failed">配置失败</string>
    <string name="updriver_HexData">Hex数据：</string>
    <string name="updriver_Times_Num">\n次数：</string>
    <string name="updriver_ID_Modify_Failed">ID没有正确修改</string>
    <string name="updriver_Set_UseCount">设置用户使用次数</string>
    <string name="updriver_Input_ADDCount">请输入需要增加的用户使用次数</string>
    <string name="updriver_Set_MaxCount">设置次数超过最大值</string>
    <string name="updriver_User_ADDCount_Yet">用户使用次数成功增加了</string>
    <string name="updriver_Times">次！</string>
    <string name="updriver_Over_MaxValue">设置次数超过最大值</string>
    <string name="updriver_Erasure_Flash_Success">擦除Flash成功！</string>
    <string name="updriver_Erasure_APP_Boot_Success">擦除App+Boot成功！</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_Sign">激活</string>
    <string name="finish_Step">完成</string>
    <string name="sign_Device">设备激活</string>
    <string name="service_Phone">客服电话：</string>
    <string name="complaint_Phone">投诉电话：</string>
    <string name="lable_Email">电子邮箱：</string>
    <string name="website">网站：</string>
    <string name="copyRight">版权所有：</string>
    <string name="copyRight_msg">贵州威思特电子有限公司</string>
</resources>