<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.Activity.Setting.AboutActivity">


    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/server_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_Phone"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/about_mobile_ll3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/about_mobile1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/company_phone1"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/about_mobile2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/company_phone2"
                            android:layout_marginLeft="30dp"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_below="@+id/about_mobile_ll3"
                        android:id="@+id/about_mobile_ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/about_mobile3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/company_phone3"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            />
                        <TextView
                            android:id="@+id/about_mobile4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/company_phone4"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:layout_marginLeft="30dp"
                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_below="@id/about_mobile_ll"
                        android:id="@+id/about_mobile_ll2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/about_mobile5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/company_phone5"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            />


                    </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complaint_Phone"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/about_mobile6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_phone6"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_Email"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_email"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />

            </LinearLayout>





        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:textColor="#000000"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website_msg"
                        android:textColor="#000000"
                        android:gravity="center"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/copyRight"
                        android:textColor="#000000"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/copyRight_msg"
                        android:textColor="#000000"
                        android:gravity="center"
                        android:layout_marginLeft="3dp"
                        />


                </LinearLayout>
               <!-- <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="技术支持:"
                        android:textColor="#000000"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Designed by WEST in GuiZhou Made in China"
                        android:textColor="#000000"
                        android:gravity="center"
                        />

                </LinearLayout>-->


            </LinearLayout>

        </RelativeLayout>



    </RelativeLayout>



    <!--<ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_AppName"
        android:textSize="@dimen/textSize20"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/about_veision"
        android:textColor="@color/background_dark"
        android:textSize="@dimen/textSize16"
        />

    <Button
        android:id="@+id/disclaimer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/about_disclaimer"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSize16" />-->





</LinearLayout>
