<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_toolbar"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_Device"
            android:textColor="#ffffff"
            android:textSize="20sp"

            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                >


            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee">

            <Button
                android:id="@+id/dialog_Negative_BTN"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/negativebutton_backgroud_style"
                android:text="@string/tip_no"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/dialog_Positive_BTN"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/positivebutton_backgroud_style"
                android:text="@string/tip_yes"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="gone"
                android:textAllCaps="false"

                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>